--- a/app/src/main/res/layout/activity_capture_image.xml
+++ b/app/src/main/res/layout/activity_capture_image.xml
@@ -33,6 +33,14 @@
             android:layout_height="0dp"
             android:layout_weight="1">
 
+            <View
+                android:id="@+id/CursorFocusView"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:background="@drawable/cursor_focus"
+                android:visibility="invisible"/>
+
             <TextureView
                 android:id="@+id/CameraTextureView"
                 android:layout_width="match_parent"
