--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,8 @@
     <!-- Custom colors-->
     <color name="dark_gray">#413C3C</color>
     <color name="mint_green">#58D68D</color>
+    <color name="pale_red">#ff9f9f</color>
+
 
     <!-- Rainbow colors -->
     <color name="red">#FFFF0000</color>
@@ -20,4 +22,5 @@
     <color name="blue">#FF0000FF</color>
     <color name="indigo">#FF4B0082</color>
     <color name="violet">#FF9400D3</color>
+
 </resources>
