--- a/app/src/main/res/layout/activity_sample_history.xml
+++ b/app/src/main/res/layout/activity_sample_history.xml
@@ -27,12 +27,13 @@
 
         <TextView
             android:id="@+id/detailsTextView"
-            android:layout_width="wrap_content"
+            android:layout_width="114dp"
             android:layout_height="wrap_content"
             android:fontFamily="@font/metrophobic_regular"
             android:text="Details"
             android:textColor="@android:color/white"
             android:textSize="27sp"
+            android:layout_marginTop="10dp"
             android:textStyle="bold" />
 
     </LinearLayout>
