--- a/app/src/main/res/layout/activity_sample_history.xml
+++ b/app/src/main/res/layout/activity_sample_history.xml
@@ -50,7 +50,9 @@
             android:id="@+id/historyRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="10dp" />
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"/>
 
     </LinearLayout>
 </LinearLayout>
