--- a/app/src/main/res/layout/show_history.xml
+++ b/app/src/main/res/layout/show_history.xml
@@ -31,7 +31,7 @@
             <LinearLayout
                 android:id="@+id/dateTimeLayout"
                 android:layout_marginTop="8dp"
-                android:layout_width="390dp"
+                android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
                 android:gravity="center"
@@ -85,7 +85,7 @@
             <LinearLayout
                 android:id="@+id/contextLayout"
                 android:layout_marginTop="8dp"
-                android:layout_width="390dp"
+                android:layout_width="match_parent"
                 android:layout_height="75dp"
                 android:layout_gravity="center"
                 android:orientation="horizontal"
@@ -117,7 +117,7 @@
                             android:fontFamily="@font/metrophobic_regular"
                             android:text="@string/meat_type"
                             android:textColor="@android:color/white"
-                            android:textSize="16sp" />
+                            android:textSize="13sp" />
 
                         <TextView
                             android:id="@+id/typeTextView"
@@ -127,7 +127,7 @@
                             android:fontFamily="@font/metrophobic_regular"
                             android:text="Pork"
                             android:textColor="@android:color/white"
-                            android:textSize="16sp" />
+                            android:textSize="13sp" />
 
                     </LinearLayout>
 
@@ -143,7 +143,7 @@
                             android:fontFamily="@font/metrophobic_regular"
                             android:text="@string/color"
                             android:textColor="@android:color/white"
-                            android:textSize="16sp" />
+                            android:textSize="13sp" />
 
                         <TextView
                             android:id="@+id/colorTextView"
@@ -153,7 +153,7 @@
                             android:fontFamily="@font/metrophobic_regular"
                             android:text="Pale Red"
                             android:textColor="@android:color/white"
-                            android:textSize="16sp" />
+                            android:textSize="13sp" />
 
                     </LinearLayout>
 
@@ -169,7 +169,7 @@
                             android:fontFamily="@font/metrophobic_regular"
                             android:text="@string/hex_code"
                             android:textColor="@android:color/white"
-                            android:textSize="16sp" />
+                            android:textSize="13sp" />
 
                         <TextView
                             android:id="@+id/hexCodeTextView"
@@ -179,7 +179,7 @@
                             android:fontFamily="@font/metrophobic_regular"
                             android:text="#f56b6f"
                             android:textColor="@android:color/white"
-                            android:textSize="16sp" />
+                            android:textSize="13sp" />
                     </LinearLayout>
                 </LinearLayout>
 
@@ -204,7 +204,7 @@
                             android:fontFamily="@font/metrophobic_regular"
                             android:text="@string/meat_status"
                             android:textColor="@android:color/white"
-                            android:textSize="16sp"
+                            android:textSize="15sp"
                             android:textStyle="bold" />
 
                         <TextView
@@ -215,7 +215,7 @@
                             android:fontFamily="@font/metrophobic_regular"
                             android:text="Fresh"
                             android:textColor="#ff9f9f"
-                            android:textSize="18sp"
+                            android:textSize="15sp"
                             android:textStyle="bold" />
                     </LinearLayout>
                 </LinearLayout>
