--- a/app/src/main/res/layout/activity_color_picker.xml
+++ b/app/src/main/res/layout/activity_color_picker.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -20,15 +20,28 @@
             <ImageView
                 android:id="@+id/CapturedImageView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="centerCrop" />
+                android:layout_height="match_parent"/>
 
-            <View
+            <FrameLayout
                 android:id="@+id/CursorPicker"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:layout_gravity="center"
-                android:background="@drawable/cursor_picker" />
+                android:layout_gravity="center">
+
+                <View
+                    android:id="@+id/CursorOutlineView"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/cursor_picker" />
+
+                <View
+                    android:id="@+id/CursorFocusView"
+                    android:layout_width="3dp"
+                    android:layout_height="3dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/cursor_focus"/>
+            </FrameLayout>
 
         </FrameLayout>
 
@@ -60,12 +73,10 @@
                     android:visibility="gone"
                     android:enabled="false" />
 
-
             </FrameLayout>
 
         </LinearLayout>
 
-
     </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
