--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,7 +13,6 @@
     <color name="mint_green">#58D68D</color>
     <color name="pale_red">#ff9f9f</color>
 
-
     <!-- Rainbow colors -->
     <color name="red">#FFFF0000</color>
     <color name="orange">#FFFF7F00</color>
@@ -22,5 +21,13 @@
     <color name="blue">#FF0000FF</color>
     <color name="indigo">#FF4B0082</color>
     <color name="violet">#FF9400D3</color>
+
+    <!-- Meat color tones-->
+    <color name="pale_pink">#F7D5D4</color>
+    <color name="pale_chestnut">#E8B3B9</color>
+    <color name="fuzzy_wuzzy">#CB6862</color>
+    <color name="medium_carmine">#AA3C3B</color>
+    <color name="burnt_seinna">#E97856</color>
+    <color name="macaroni_cheese">#FCB79A</color>
 
 </resources>
