Updated the color activity, it is now fully functional when pointing at the cursor it retrieves the proper hex code of the pixel image and pass the data such as meatType, colorDrawable, hexCode, and colorName(Pending) to the color dialog box

--- a/app/src/main/res/layout/activity_color_picker.xml
+++ b/app/src/main/res/layout/activity_color_picker.xml
@@ -15,6 +15,7 @@
             android:id="@+id/ImageFrameLayout"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:orientation="vertical"
             android:layout_weight="1">
 
             <ImageView
@@ -22,26 +23,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
 
-            <FrameLayout
-                android:id="@+id/CursorPicker"
+            <ImageView
+                android:id="@+id/CrosshairImageView"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:layout_gravity="center">
-
-                <View
-                    android:id="@+id/CursorOutlineView"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_gravity="center"
-                    android:background="@drawable/cursor_picker" />
-
-                <View
-                    android:id="@+id/CursorFocusView"
-                    android:layout_width="3dp"
-                    android:layout_height="3dp"
-                    android:layout_gravity="center"
-                    android:background="@drawable/cursor_focus"/>
-            </FrameLayout>
+                android:layout_gravity="center"
+                android:src="@drawable/crosshair_icon"/>
 
         </FrameLayout>
 
