--- a/app/src/main/res/layout/meat_description_dialog.xml
+++ b/app/src/main/res/layout/meat_description_dialog.xml
@@ -69,7 +69,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/meatTypeTextView"
+                    android:id="@+id/MeatTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/metrophobic_regular"
@@ -78,12 +78,12 @@
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/typeTextView"
+                    android:id="@+id/MeatTypeTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:fontFamily="@font/metrophobic_regular"
-                    android:text="Pork"
+                    android:text="Sample"
                     android:textColor="@android:color/white"
                     android:textSize="16sp" />
 
@@ -109,7 +109,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:fontFamily="@font/metrophobic_regular"
-                    android:text="Color Name"
+                    android:text="Black"
                     android:textColor="@android:color/white"
                     android:textSize="16sp" />
 
@@ -135,7 +135,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:fontFamily="@font/metrophobic_regular"
-                    android:text="#FFF"
+                    android:text="#00000"
                     android:textColor="@android:color/white"
                     android:textSize="16sp" />
             </LinearLayout>
