--- a/app/src/main/res/layout/activity_history_details.xml
+++ b/app/src/main/res/layout/activity_history_details.xml
@@ -72,11 +72,11 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/ConfirmImageView"
+                    android:id="@+id/colorImageView"
                     android:layout_width="70dp"
                     android:layout_height="70dp"
                     android:layout_gravity="center"
-                    android:src="@drawable/circle" />
+                    android:background="@drawable/circle_background" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -104,7 +104,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="8dp"
                             android:fontFamily="@font/metrophobic_regular"
-                            android:text="Pork"
+                            android:text=""
                             android:textColor="@android:color/white"
                             android:textSize="16sp" />
 
@@ -130,7 +130,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="8dp"
                             android:fontFamily="@font/metrophobic_regular"
-                            android:text="Pale Red"
+                            android:text=""
                             android:textColor="@android:color/white"
                             android:textSize="16sp" />
 
@@ -156,7 +156,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="8dp"
                             android:fontFamily="@font/metrophobic_regular"
-                            android:text="#f56b6f"
+                            android:text=""
                             android:textColor="@android:color/white"
                             android:textSize="16sp" />
                     </LinearLayout>
@@ -191,7 +191,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/metrophobic_regular"
-                            android:text="Status"
+                            android:text=""
                             android:textColor="#ff9f9f"
                             android:textSize="20sp"
                             android:textStyle="bold" />
