--- a/app/src/main/res/layout/show_history.xml
+++ b/app/src/main/res/layout/show_history.xml
@@ -96,7 +96,7 @@
                     android:layout_width="70dp"
                     android:layout_height="70dp"
                     android:layout_gravity="center"
-                    android:src="@drawable/circle" />
+                   android:background="@drawable/circle_background" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
