--- a/app/src/main/res/layout/meat_description_dialog.xml
+++ b/app/src/main/res/layout/meat_description_dialog.xml
@@ -140,7 +140,7 @@
                     android:textSize="16sp" />
             </LinearLayout>
 
-            <LinearLayout
+m            <!--<LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
@@ -163,7 +163,7 @@
                     android:text=""
                     android:textColor="@android:color/white"
                     android:textSize="16sp" />
-            </LinearLayout>
+            </LinearLayout>-->
         </LinearLayout>
     </LinearLayout>
 
