changed the cursor size to 1/2 inch and setting it from certain pixel to cursor range for color picking

--- a/app/src/main/res/layout/activity_color_picker.xml
+++ b/app/src/main/res/layout/activity_color_picker.xml
@@ -25,10 +25,10 @@
 
             <ImageView
                 android:id="@+id/CrosshairImageView"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:layout_gravity="center"
-                android:src="@drawable/crosshair_icon"/>
+                android:src="@drawable/cursor_picker"/>
 
         </FrameLayout>
 
