--- a/app/src/main/res/layout/meat_description_dialog.xml
+++ b/app/src/main/res/layout/meat_description_dialog.xml
@@ -190,7 +190,7 @@
                     android:textSize="16sp" />
             </LinearLayout>
 
-            <!--<LinearLayout
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
@@ -238,7 +238,7 @@
                     android:text=""
                     android:textColor="@android:color/white"
                     android:textSize="16sp" />
-            </LinearLayout> -->
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 
