--- a/app/src/main/res/layout/progress_dialog.xml
+++ b/app/src/main/res/layout/progress_dialog.xml
@@ -6,7 +6,7 @@
     android:layout_gravity="center"
     android:orientation="vertical"
     android:padding="16dp"
-    android:background="#80000000">
+    android:background="#000000">
 
     <ProgressBar
         android:id="@+id/progressBar"
